# physical_ai_runtime

./: .envrc  .gitignore  .gitmodules  AGENTS.md  README.md  pixi.toml
.codex/skills/physical-ai-incremental-validation/: SKILL.md
.codex/skills/physical-ai-incremental-validation/agents/: openai.yaml
.codex/skills/ros2-engineering-skills/communication/: SKILL.md
.codex/skills/ros2-engineering-skills/debugging/: SKILL.md
.codex/skills/ros2-engineering-skills/deployment/: SKILL.md
.codex/skills/ros2-engineering-skills/hardware-interface/: SKILL.md
.codex/skills/ros2-engineering-skills/launch-system/: SKILL.md
.codex/skills/ros2-engineering-skills/lifecycle-components/: SKILL.md
.codex/skills/ros2-engineering-skills/manipulation/: SKILL.md
.codex/skills/ros2-engineering-skills/message-types/: SKILL.md
.codex/skills/ros2-engineering-skills/micro-ros/: SKILL.md
.codex/skills/ros2-engineering-skills/migration-ros1/: SKILL.md
.codex/skills/ros2-engineering-skills/multi-robot/: SKILL.md
.config/: cyclonedds_default.xml  cyclonedds_template.xml
.cursor/rules/: project-skills.mdc
docs/: ARCHITECTURE.md  COLOCATION_VALIDATION.md  END_EFFECTOR_CONVENTIONS.md  EXAMPLE1.md  MIGRATION.md  RECORDING_ARCHITECTURE.md  RUNTIME_ORCHESTRATION.md
repos/: embodiment.repos  example.repos  example1.repos  necessary.repos
scripts/: fetch_example1_apps.sh  franka_colcon_ignore.sh  setup.sh  stop_ros.sh
src/policy_inference/: README.md
src/policy_inference/examples/: diffusion_planner_example.py  trajectory_policy_example.py  vla_policy_example.py
src/toolbox/rviz_topic_button_panel/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/toolbox/rviz_topic_button_panel/include/rviz_topic_button_panel/: empty_topic_button_panel.hpp
src/toolbox/rviz_topic_button_panel/src/: empty_topic_button_panel.cpp
(+10 files in other folders)
